--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MERN Chat-App</title>
+    <style>
+      .App {
+        min-height: 100vh;
+        display: flex;
+        background-image: url("background.png");
+        background-size: cover;
+        background-position: center;
+      }
+    </style>
+    <script>
+      const text = document.getElementById("text");
+      console.log('text: ', text);
+      
+    </script>
   </head>
   <body>
     <div id="root"></div>
