--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://i.ibb.co/CH1hZnz/messenger.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MERN Chat-App</title>
+    <title>Wave Talk</title>
   </head>
   <body>
     <div id="root"></div>
